--- a/css/components/content.css
+++ b/css/components/content.css
@@ -6,7 +6,7 @@ padding: 5px;
 
 .animation p{
     margin-bottom: 20px;
-    width: 420px;
+    width: 100%;
 }
 .animation{
     margin-bottom: 50px;
