--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,20 @@
-@import "common/reset.css";
-@import "common/variables.css";
+@import "common/index.css";
+
+@import "components/_beige/index.css";
+@import "components/_white/index.css";
+@import "components/_bigimg/index.css";
+@import "components/_animation/index.css";
+@import "components/_link/index.css";
+@import "components/_line/index.css";
+
 
 @import "components/header.css";
 @import "style.css";
-@import "components/line.css";
 @import "components/small line.css";
 @import "components/content.css";
-@import "components/animation.css";
-@import "components/LINK.css";
+
+
+
+
 @import "components/cube.css";
-@import "components/bigimg.css";
+
