--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,7 @@
 @import "style.css";
 @import "components/small line.css";
 @import "components/content.css";
+@import "components/last.css";
 
 
 
