--- a/css/components/_animation/animation_media.css
+++ b/css/components/_animation/animation_media.css
@@ -1,4 +1,35 @@
+@media (max-width: 1000px) {
+    .animation{
+        width: 100%;
+    }
+    .animation .p   {
+        width: 100%;
+    }
+}
+
+@media (max-width: 992px) {
+    .animation{
+        width: 100%;
+    }
+    .animation .p   {
+        width: 100%;
+    }
+}
+
+
+
+
+
 @media (max-width: 767px) {
+    .animation{
+        width: 100%;
+    }
+    .animation .p   {
+        width: 100%;
+    }
+}
+
+@media (max-width: 500px) {
     .animation{
         width: 100%;
     }
